fix overflow bug

--- a/style.css
+++ b/style.css
@@ -94,8 +94,8 @@ body {
   justify-content: space-evenly;
   align-items: center;
   margin-top: 30px;
-  overflow:auto;
-
+  flex-wrap: wrap;
+  overflow: auto;
 }
 
 .middle-div {
